--- a/butler/config/manager/controller_manager_config.yaml
+++ b/butler/config/manager/controller_manager_config.yaml
@@ -8,7 +8,7 @@ webhook:
   port: 9443
 leaderElection:
   leaderElect: true
-  resourceName: 41ac184c.octopipe.io
+  resourceName: dec90f54.charlescd.io
 # leaderElectionReleaseOnCancel defines if the leader should step down volume
 # when the Manager ends. This requires the binary to immediately end when the
 # Manager is stopped, otherwise, this setting is unsafe. Setting this significantly
