--- a/butler/config/crd/patches/webhook_in_modules.yaml
+++ b/butler/config/crd/patches/webhook_in_modules.yaml
@@ -2,7 +2,7 @@
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: stacks.stack.octopipe.io
+  name: modules.charlescd.io
 spec:
   conversion:
     strategy: Webhook
