--- a/butler/config/rbac/module_editor_role.yaml
+++ b/butler/config/rbac/module_editor_role.yaml
@@ -1,20 +1,24 @@
-# permissions for end users to view stacks.
+# permissions for end users to edit modules.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: stack-viewer-role
+  name: module-editor-role
 rules:
 - apiGroups:
-  - stack.octopipe.io
+  - charlescd.io
   resources:
-  - stacks
+  - modules
   verbs:
+  - create
+  - delete
   - get
   - list
+  - patch
+  - update
   - watch
 - apiGroups:
-  - stack.octopipe.io
+  - charlescd.io
   resources:
-  - stacks/status
+  - modules/status
   verbs:
   - get
