--- a/butler/config/rbac/module_viewer_role.yaml
+++ b/butler/config/rbac/module_viewer_role.yaml
@@ -1,20 +1,20 @@
-# permissions for end users to view resources.
+# permissions for end users to view modules.
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: resource-viewer-role
+  name: module-viewer-role
 rules:
 - apiGroups:
-  - stack.octopipe.io
+  - charlescd.io
   resources:
-  - resources
+  - modules
   verbs:
   - get
   - list
   - watch
 - apiGroups:
-  - stack.octopipe.io
+  - charlescd.io
   resources:
-  - resources/status
+  - modules/status
   verbs:
   - get
