Create http server to expose cluster objects
Signed-off-by: Maycon Pacheco <mayconjrpacheco@gmail.com>

--- a/butler/config/samples/_v1alpha1_circle.yaml
+++ b/butler/config/samples/_v1alpha1_circle.yaml
@@ -10,5 +10,7 @@ spec:
   modules:
     - moduleRef: charlescd-guestbook-simple
       revision: "aaaa"
+    - moduleRef: charlescd-guestbook-simple-server
+      revision: bbb
   
   # TODO(user): Add fields here
