--- a/butler/config/samples/_v1alpha1_module.yaml
+++ b/butler/config/samples/_v1alpha1_module.yaml
@@ -1,10 +1,10 @@
 apiVersion: charlescd.io/v1alpha1
 kind: Module
 metadata:
-  name: charlescd-guestbook-simple
+  name: charlescd-guestbook-simple-server
 spec:
   author: Mayco Pacheco
-  repositoryPath: git@github.com:octopipe/charlescd-samples.git
-  deploymentPath: guestbook
+  repositoryPath: git@github.com:octopipe/charlescd-samples-server.git
+  deploymentPath: guestbook-server
   secretRef: default/mysecret
   templateType: simple
