refact butler internal
Signed-off-by: Maycon Pacheco <mayconjrpacheco@gmail.com>

--- a/butler/config/crd/bases/charlescd.io_circles.yaml
+++ b/butler/config/crd/bases/charlescd.io_circles.yaml
@@ -59,6 +59,8 @@ spec:
                       type: string
                   type: object
                 type: array
+              namespace:
+                type: string
             type: object
           status:
             description: CircleStatus defines the observed state of Circle
