--- a/ui/package.json
+++ b/ui/package.json
@@ -14,7 +14,9 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
+    "reaflow": "^5.0.7",
     "typescript": "^4.8.3",
     "web-vitals": "^2.1.4"
   },
