Add yaml path suport
Signed-off-by: Maycon Pacheco <mayconjrpacheco@gmail.com>

--- a/butler/config/crd/bases/charlescd.io_circles.yaml
+++ b/butler/config/crd/bases/charlescd.io_circles.yaml
@@ -51,12 +51,17 @@ spec:
               modules:
                 items:
                   properties:
-                    Overrides:
-                      additionalProperties:
-                        type: string
-                      type: object
                     moduleRef:
                       type: string
+                    overrides:
+                      items:
+                        properties:
+                          key:
+                            type: string
+                          value:
+                            type: string
+                        type: object
+                      type: array
                     revision:
                       type: string
                   type: object
