--- a/ui/package.json
+++ b/ui/package.json
@@ -14,9 +14,11 @@
     "@types/node": "^16.11.59",
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
+    "ace-builds": "^1.11.1",
     "bootstrap": "^5.2.1",
     "dagre": "^0.8.5",
     "react": "^18.2.0",
+    "react-ace": "^10.1.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
