--- a/butler/config/crd/bases/charlescd.io_circles.yaml
+++ b/butler/config/crd/bases/charlescd.io_circles.yaml
@@ -37,6 +37,39 @@ spec:
             properties:
               author:
                 type: string
+              deployStrategy:
+                properties:
+                  canary:
+                    properties:
+                      weight:
+                        type: integer
+                    required:
+                    - weight
+                    type: object
+                  default:
+                    properties:
+                      customMatch:
+                        properties:
+                          headers:
+                            additionalProperties:
+                              type: string
+                            type: object
+                        type: object
+                      segments:
+                        items:
+                          properties:
+                            condition:
+                              type: string
+                            key:
+                              type: string
+                            value:
+                              type: string
+                          type: object
+                        type: array
+                    type: object
+                  key:
+                    type: string
+                type: object
               description:
                 type: string
               environments:
@@ -70,17 +103,6 @@ spec:
                 type: array
               namespace:
                 type: string
-              segments:
-                items:
-                  properties:
-                    condition:
-                      type: string
-                    key:
-                      type: string
-                    value:
-                      type: string
-                  type: object
-                type: array
             type: object
           status:
             description: CircleStatus defines the observed state of Circle
