--- a/ui/package.json
+++ b/ui/package.json
@@ -3,10 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.8",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,11 +19,9 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "ace-builds": "^1.11.1",
-    "bootstrap": "^5.2.1",
     "dagre": "^0.8.5",
     "react": "^18.2.0",
     "react-ace": "^10.1.0",
-    "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
     "react-router-dom": "^6.4.1",
