--- a/butler/config/samples/_v1alpha1_circle_default.yaml
+++ b/butler/config/samples/_v1alpha1_circle_default.yaml
@@ -5,6 +5,13 @@ metadata:
 spec:
   author: Maycon Pacheco
   isDefault: true
+  namespace: myapp
+  routing: 
+    strategy: default
+    default:
+      customMatch:
+        - headers:
+            tenantId: "1111"
   environments:
     - key: API_PATH
       value: http://api.default.io
