--- a/butler/config/samples/_v1alpha1_circle_default.yaml
+++ b/butler/config/samples/_v1alpha1_circle_default.yaml
@@ -10,8 +10,8 @@ spec:
     strategy: default
     default:
       customMatch:
-        - headers:
-            tenantId: "1111"
+        headers:
+          tenantId: "1111"
   environments:
     - key: API_PATH
       value: http://api.default.io
