--- a/readthedocs.yml
+++ b/readthedocs.yml
@@ -2,6 +2,8 @@ version: 2
 formats: all
 mkdocs:
   fail_on_warning: false
+mkdocs:
+  configuration: docs/mkdocs.yml
 python:
   install:
     - requirements: docs/requirements.txt
