--- a/ui/package.json
+++ b/ui/package.json
@@ -28,6 +28,7 @@
     "react-scripts": "5.0.1",
     "react-svg": "^15.1.10",
     "reaflow": "^5.0.7",
+    "recharts": "^2.1.16",
     "sass": "^1.55.0",
     "typescript": "^4.8.3",
     "use-http": "^1.0.27",
