Change circle modules structure

--- a/butler/config/crd/bases/charlescd.io_circles.yaml
+++ b/butler/config/crd/bases/charlescd.io_circles.yaml
@@ -53,7 +53,9 @@ spec:
               modules:
                 items:
                   properties:
-                    moduleRef:
+                    name:
+                      type: string
+                    namespace:
                       type: string
                     overrides:
                       items:
