--- a/butler/config/samples/_v1alpha1_circle_default.yaml
+++ b/butler/config/samples/_v1alpha1_circle_default.yaml
@@ -5,7 +5,7 @@ metadata:
 spec:
   author: Maycon Pacheco
   isDefault: true
-  namespace: test-1
+  namespace: workspace-2
   routing: 
     strategy: default
     default:
