--- a/butler/buf.gen.yaml
+++ b/butler/buf.gen.yaml
@@ -6,3 +6,8 @@ plugins:
   - remote: buf.build/library/plugins/go-grpc:v1.1.0-2
     out: ./
     opt: paths=source_relative,require_unimplemented_servers=false
+  - remote: buf.build/jirkad/plugins/protoc-gen-validate:v0.6.7
+    out: ./
+    opt: 
+      - lang=go
+      - paths=source_relative
