--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -7,7 +7,7 @@ on:
 
 jobs:
   example:
-    name: Example Minikube-Kubernetes Cluster interaction
+    name: Run CI pipeline of modules
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,5 +18,7 @@ jobs:
           minikube version: 'v1.26.1'
           kubernetes version: 'v1.25.0'
           github token: ${{ secrets.GITHUB_TOKEN }}
-      - name: Interact with the cluster
-        run: kubectl get nodes
+      - name: Run butler e2e tests
+        working-directory: ./butler
+        run: |
+          make e2e-test
