--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -18,6 +18,14 @@ jobs:
           minikube version: 'v1.26.1'
           kubernetes version: 'v1.25.0'
           github token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Generate CRDs
+        working-directory: ./butler
+        run: |
+          make manifest
+      - name: Install crds
+        working-directory: ./butler
+        run: |
+          make install
       - name: Run butler e2e tests
         working-directory: ./butler
         run: |
