--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Generate CRDs
         working-directory: ./butler
         run: |
-          make manifest
+          make manifests
       - name: Install crds
         working-directory: ./butler
         run: |
