--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -19,15 +19,12 @@ jobs:
           kubernetes version: 'v1.25.0'
           github token: ${{ secrets.GITHUB_TOKEN }}
       - name: Build proto
-        working-directory: ./butler
         run: |
           make proto
-      - name: Install crds
-        working-directory: ./butler
+      - name: Install CRDs
         run: |
           make install
       - name: Run butler e2e tests
-        working-directory: ./butler
         run: |
           make e2e-test
     
