--- a/docs/requirements.txt
+++ b/docs/requirements.txt
@@ -2,3 +2,4 @@ mkdocs-material==8.2.7
 mkdocs-macros-plugin>=0.5.12
 mkdocs-awesome-pages-plugin>=2.5
 mkdocs-redirects>=1.0.3
+mkdocs-render-swagger-plugin
