--- a/docs/docs/references/moove.yaml
+++ b/docs/docs/references/moove.yaml
@@ -30,6 +30,50 @@ paths:
           description: Successful response
           content:
             application/json: {}
+    put:
+      tags:
+        - Circle
+      summary: Update
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                environments:
+                  - value: API_URL
+                    key: http://service.api.com.br
+                modules:
+                  - namespace: default
+                    overrides:
+                      - value: mayconjrpacheco/dragonboarding:goku
+                        key: $.spec.template.spec.containers[0].image
+                    name: charlescd-guestbook
+                    revision: officia nisi pariatur laboris
+                name: circle-1
+                namespace: workspace-2
+                routing:
+                  match:
+                    customMatch:
+                      headers:
+                        x-product-id: '333'
+                  strategy: 2
+      parameters:
+        - name: workspace_id
+          in: path
+          schema:
+            type: string
+          required: true
+        - name: circle_name
+          in: path
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
     delete:
       tags:
         - Circle
@@ -189,51 +233,6 @@ paths:
                   strategy: 2
       parameters:
         - name: workspace_id
-          in: path
-          schema:
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json: {}
-  /workspaces/{workspace_id}/circles/{circle_name}:
-    put:
-      tags:
-        - Circle
-      summary: Update
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              example:
-                environments:
-                  - value: API_URL
-                    key: http://service.api.com.br
-                modules:
-                  - namespace: default
-                    overrides:
-                      - value: mayconjrpacheco/dragonboarding:goku
-                        key: $.spec.template.spec.containers[0].image
-                    name: charlescd-guestbook
-                    revision: officia nisi pariatur laboris
-                name: circle-1
-                namespace: workspace-2
-                routing:
-                  match:
-                    customMatch:
-                      headers:
-                        x-product-id: '333'
-                  strategy: 2
-      parameters:
-        - name: workspace_id
-          in: path
-          schema:
-            type: string
-          required: true
-        - name: circla_name
           in: path
           schema:
             type: string
