--- a/docs/docs/references/moove.yaml
+++ b/docs/docs/references/moove.yaml
@@ -44,20 +44,17 @@ paths:
                   - value: API_URL
                     key: http://service.api.com.br
                 modules:
-                  - namespace: default
-                    overrides:
+                  - overrides:
                       - value: mayconjrpacheco/dragonboarding:goku
                         key: $.spec.template.spec.containers[0].image
-                    name: charlescd-guestbook
-                    revision: officia nisi pariatur laboris
-                name: circle-1
-                namespace: workspace-2
+                    name: guestbook-ui
+                    revision: HEAD
+                name: teste-c
                 routing:
                   match:
                     customMatch:
                       headers:
-                        x-product-id: '333'
-                  strategy: 2
+                        x-product-id: aaaaaaaaaaa
       parameters:
         - name: workspace_id
           in: path
@@ -217,14 +214,12 @@ paths:
                   - value: API_URL
                     key: http://service.api.com.br
                 modules:
-                  - namespace: workspace-test
-                    overrides:
+                  - overrides:
                       - value: mayconjrpacheco/dragonboarding:goku
                         key: $.spec.template.spec.containers[0].image
                     name: guestbook-ui
                     revision: HEAD
-                name: teste-a
-                namespace: workspace-2
+                name: teste-f
                 routing:
                   match:
                     customMatch:
@@ -232,6 +227,33 @@ paths:
                         x-product-id: aaaaaaaaaaa
       parameters:
         - name: workspace_id
+          in: path
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
+  /workspaces/{workspace_id}/circles/{circle_name}/sync:
+    post:
+      tags:
+        - Circle
+      summary: Sync
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example: {}
+      parameters:
+        - name: workspace_id
+          in: path
+          schema:
+            type: string
+          required: true
+        - name: circle_name
           in: path
           schema:
             type: string
@@ -262,6 +284,36 @@ paths:
           description: Successful response
           content:
             application/json: {}
+    post:
+      tags:
+        - Module
+      summary: Create
+      requestBody:
+        content:
+          application/json:
+            schema:
+              type: object
+              example:
+                name: guestbook-ui
+                path: guestbook
+                url: https://github.com/octopipe/charlescd-samples
+                templateType: simple
+      parameters:
+        - name: workspace_id
+          in: path
+          schema:
+            type: string
+          required: true
+        - name: module_name
+          in: path
+          schema:
+            type: string
+          required: true
+      responses:
+        '200':
+          description: Successful response
+          content:
+            application/json: {}
     put:
       tags:
         - Module
@@ -275,7 +327,7 @@ paths:
                 name: guestbook-ui
                 path: guestbook
                 url: https://github.com/octopipe/charlescd-samples
-                teamplateType: simple
+                templateType: simple
       parameters:
         - name: workspace_id
           in: path
@@ -317,31 +369,6 @@ paths:
       tags:
         - Module
       summary: Find all
-      parameters:
-        - name: workspace_id
-          in: path
-          schema:
-            type: string
-          required: true
-      responses:
-        '200':
-          description: Successful response
-          content:
-            application/json: {}
-    post:
-      tags:
-        - Module
-      summary: Create
-      requestBody:
-        content:
-          application/json:
-            schema:
-              type: object
-              example:
-                name: guestbook-ui
-                path: guestbook
-                url: https://github.com/octopipe/charlescd-samples
-                teamplateType: simple
       parameters:
         - name: workspace_id
           in: path
