--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,7 +25,7 @@ jobs:
         run: |
           make install
       - name: Run test and coverage
-        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./test -v
+        run: go test -race -coverprofile=coverage.txt -covermode=atomic ./... -v
       - name: Upload coverage to Codecov
         uses: codecov/codecov-action@v3
     
