--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,7 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - uses: engineerd/setup-kind@v0.5.0
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.3.0
       - name: Build proto
         run: |
           make proto
