--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,8 +12,13 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Create k8s Kind Cluster
-        uses: helm/kind-action@v1.3.0
+      - name: Setup Minikube
+        uses: manusa/actions-setup-minikube@v2.7.1
+        with:
+          minikube version: 'v1.26.1'
+          kubernetes version: 'v1.25.0'
+          github token: ${{ secrets.GITHUB_TOKEN }}
+          start args: --cpu=max --memory=max
       - name: Build proto
         run: |
           make proto
