Add save circle to UI

--- a/docs/docs/references/moove.yaml
+++ b/docs/docs/references/moove.yaml
@@ -402,7 +402,7 @@ paths:
               example:
                 name: Workspace test 1
                 description: Lorem ipsum
-                deployStrategy: circle
+                routingStrategy: circle
       responses:
         '200':
           description: Successful response
