--- a/install/crd/bases/charlescd.io_circles.yaml
+++ b/install/crd/bases/charlescd.io_circles.yaml
@@ -81,7 +81,7 @@ spec:
                     required:
                     - weight
                     type: object
-                  default:
+                  match:
                     properties:
                       customMatch:
                         properties:
