Create module main ui

--- a/install/crd/bases/charlescd.io_modules.yaml
+++ b/install/crd/bases/charlescd.io_modules.yaml
@@ -49,6 +49,8 @@ spec:
                 type: object
               author:
                 type: string
+              description:
+                type: string
               path:
                 type: string
               secretRef:
