--- a/ui/package.json
+++ b/ui/package.json
@@ -17,6 +17,7 @@
     "@types/react": "^18.0.20",
     "@types/react-dom": "^18.0.6",
     "ace-builds": "^1.11.1",
+    "axios": "^1.2.1",
     "bootstrap": "^5.2.2",
     "dagre": "^0.8.5",
     "react": "^18.2.0",
@@ -26,11 +27,11 @@
     "react-flow-renderer": "^10.3.17",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "react-svg": "^15.1.10",
     "react-toastify": "^9.1.1",
     "reaflow": "^5.0.7",
-    "recharts": "^2.1.16",
+    "recharts": "^2.2.0",
     "sass": "^1.55.0",
     "typescript": "^4.8.3",
     "use-http": "^1.0.27",
