--- a/ui/package.json
+++ b/ui/package.json
@@ -25,6 +25,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-flow-renderer": "^10.3.17",
+    "react-hook-form": "^7.41.1",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^5.0.1",
