--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -12,13 +12,8 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v3
-      - name: Setup Minikube
-        uses: manusa/actions-setup-minikube@v2.7.1
-        with:
-          minikube version: 'v1.26.1'
-          kubernetes version: 'v1.25.2'
-          github token: ${{ secrets.GITHUB_TOKEN }}
-          start args: --cpus=max --memory=max
+      - name: Create k8s Kind Cluster
+        uses: helm/kind-action@v1.4.0
       - name: Build proto
         run: |
           make proto
